Fix multiple issues from console logs
- Fixed React Hook order in UserDetailModal to prevent conditional hook usage
- Added missing English translation keys for localNomads, common, and dashboard
- Added null check for Supabase client in meetups API to prevent 500 errors
- Fixed useEffect dependency array and early return logic
- Added proper error handling for database unavailable scenarios

Translation keys added:
- localNomads: loadingHotCities, noHotCities, beFirstInYourCity, loadingHotMeetups, noHotMeetups, createFirstMeetup, loadingLeaderboard, noActiveUsers, beFirstActiveUser
- common: previous, next
- dashboard: addFirstCity, startRecording, addCity

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -464,6 +464,8 @@
     "suggestTool": "Suggest Tool",
     "visitWebsite": "Visit Website",
     "back": "Back",
+    "previous": "Previous",
+    "next": "Next",
     "viewDetails": "View Details",
     "learnMore": "Learn more",
     "loadingLocationData": "Loading location data...",
@@ -652,6 +654,9 @@
       "editTrajectory": "Edit Trajectory",
       "notesPlaceholder": "Record some thoughts about this trip..."
     },
+    "addFirstCity": "Add Your First City",
+    "startRecording": "Start Recording",
+    "addCity": "Add City",
     "recommendations": {
       "priorityIndicator": "Priority Indicator",
       "algorithmExplanation": "We generate recommendations based on WiFi speed, cost of living, visa days, climate comfort, and social atmosphere.",
@@ -3182,6 +3187,15 @@
     "peopleJoined": "people joined",
     "joinMeetup": "Join Meetup",
     "startChat": "Start Chat",
+    "loadingHotCities": "Loading Hot Cities...",
+    "noHotCities": "No Hot Cities",
+    "beFirstInYourCity": "Be the first in your city!",
+    "loadingHotMeetups": "Loading Hot Meetups...",
+    "noHotMeetups": "No Hot Meetups",
+    "createFirstMeetup": "Create the first meetup!",
+    "loadingLeaderboard": "Loading Leaderboard...",
+    "noActiveUsers": "No Active Users",
+    "beFirstActiveUser": "Be the first active user!",
     "sortByOnline": "Recently Online",
     "searchAndFilter": "Search & Filter",
     "meetupsCount": "Meetups",
